--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,31 @@
 #underline{
     background-color: yellow;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  th {
+    background-color: #4e89ae;
+    color: white;
+  }
+  
+  tr:nth-child(1), tr:nth-child(3) {
+    background-color: lightblue;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+   
